fix scrollbar for windows

--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@
 	color: var(--bg-color);
 }
 
+::-webkit-scrollbar {
+	width: 0px;
+}
+
 ::-webkit-scrollbar-track {
   background: var(--track-color);
 }
